[workspace]
members = [
    "app",
    "api",
    "arkime",
    "output/disk",
    "output/elasticsearch",
    "parsers/dns",
    "parsers/ethernet",
    "parsers/http",
    "parsers/misc",
    "parsers/simple-writer",
    "parsers/tcp",
    "parsers/tls",
    "parsers/ip",
    "parsers/udp",
    "rx-drivers/libpcap",
    "rx-drivers/files",
]
resolver = "2"
