[workspace]
members = [
    "app",
    "api",
    "arkime",
    "output/disk",
    "output/elasticsearch",
    "pkt-processors/dhcp",
    "pkt-processors/dns",
    "pkt-processors/ethernet",
    "pkt-processors/http",
    "pkt-processors/misc",
    "pkt-processors/simple-writer",
    "pkt-processors/tcp",
    "pkt-processors/tls",
    "pkt-processors/ip",
    "pkt-processors/udp",
    "rx-drivers/libpcap",
    "rx-drivers/files",
    "utils",
]
resolver = "2"
