[workspace]
members = [
    "app",
    "api",
    "arkime",
    "output/disk",
    "output/elasticsearch",
    "pkt-processors/dhcp",
    "pkt-processors/dns",
    "pkt-processors/entropy",
    "pkt-processors/ethernet",
    "pkt-processors/http",
    "pkt-processors/ip",
    "pkt-processors/krb5",
    "pkt-processors/misc",
    "pkt-processors/simple-writer",
    "pkt-processors/tcp",
    "pkt-processors/tls",
    "pkt-processors/udp",
    "rx-drivers/libpcap",
    "utils",
]
resolver = "2"
