[package]
name = "alphonse-api"
version = "0.1.0"
authors = ["Jack Liar"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bitflags = "1.2"
chrono = "0.4"
enum-primitive-derive = "0.2"
hyperscan = "0.2.0"
libc = "0.2"
libloading = "0.6"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
rustc_version = "0.3"

[dev-dependencies]
twox-hash = "*"
fnv = "*"

[features]
default = [ "pkt-hash-mac" ]
arkime = []
pkt-hash-mac = []
