[package]
name = "alphonse-api"
version = "0.1.0"
authors = ["Jack Liar"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bitflags = "1.2"
chrono = "0.4"
crossbeam-channel = "0.5"
elasticsearch = { version = "7.12.1-alpha.1", features = ["rustls-tls"] }
enum-primitive-derive = "0.2"
fnv = "1"
hyperscan = { version = "0.2", features = ["static"] }
libc = "0.2"
mimalloc = { version = "0.1", default-features = false, optional = true }
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tcmalloc = { version = "0.3", optional = true }
tinyvec = { version = "1.3", features = ["alloc"] }
yaml-rust = ">=0.4.1"

[build-dependencies]
rustc_version = "0.4"

[dev-dependencies]
twox-hash = "*"
rand = "*"

[features]
default = ["pkt-hash-mac"]
arkime = []
pkt-hash-mac = []
use-tcmalloc = ["tcmalloc"]
use-mimalloc = ["mimalloc"]
