[package]
name = "alphonse-api"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
bitflags = "1.3"
chrono = "0.4"
crossbeam-channel = "0.5"
enum-primitive-derive = "0.2"
hyperscan = { version = "0.2", features = ["static"] }
libc = "0.2"
mimalloc = { version = "0.1", default-features = false, optional = true }
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tcmalloc = { version = "0.3", optional = true }
tinyvec = { version = "1.3", features = ["alloc"] }
yaml-rust = ">=0.4.1"

[build-dependencies]
rustc_version = "0.4"

[dev-dependencies]
twox-hash = "*"
rand = "*"

[features]
arkime = []
heuristic-mpls = []
pkt-hash-mac = []
use-tcmalloc = ["tcmalloc"]
use-mimalloc = ["mimalloc"]
