[package]
name = "alphonse"
version = "0.1.0"
authors = ["Jack Liar <15205739+JackLiar@users.noreply.github.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
# arc-swap = "1.1"
clap = "2.33.3"
crossbeam-channel = "0.5"
chrono = "0.4"
elasticsearch = "7.10.1-alpha.1"
fnv = "1.0"
libc = "0.2"
libloading = "0.6"
path-absolutize = "3.0"
pcap = "0.8"
rte = { git = "https://github.com/JackLiar/rust-dpdk.git", optional = true }
serde_json = "1.0"
signal-hook = "0.3"
tokio = { version = "1.1", features = ["macros", "net", "rt-multi-thread", "time"] }
yaml-rust = "0.4"

[dependencies.alphonse-api]
path = "../api"
optional = false
version = "0.1.0"

[dependencies.hyperscan]
version = "0.2.0"
features = ["chimera"]

[features]
arkime = [ "alphonse-api/arkime" ]
dpdk = [ "rte" ]
heuristic-mpls = []
