[package]
name = "alphonse"
version = "0.1.0"
edition = "2018"

[dependencies]
alphonse-api = { path = "../api", version = "0.1.0" }
anyhow = "1.0"
# arc-swap = "1.1"
clap = "2.33"
crossbeam-channel = "0.5"
chrono = "0.4"
dashmap = { version = "4.0", features = ["raw-api"] }
dynamic_reload = "0.4"
fnv = "1.0"
hostname = "0.3"
once_cell = "1.8"
rayon = "1.5"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
signal-hook = "0.3"
strum = { version = "0.21.0", features = ["derive"] }
tokio = { version = ">=1.8.1", features = ["macros", "net", "rt-multi-thread", "time"] }
yaml-rust = ">=0.4.1"

[features]
arkime = ["alphonse-api/arkime"]
heuristic-mpls = ["alphonse-api/tcmalloc"]
use-tcmalloc = ["alphonse-api/tcmalloc"]
use-mimalloc = ["alphonse-api/mimalloc"]
