[package]
name = "alphonse-arkime"
version = "0.1.0"
edition = "2018"

[dependencies]
alphonse-api = { path = "../api", version = "0.1.0", optional = true }
alphonse-utils = { path = "../utils", version = "0.1.0", optional = true }
anyhow = "1.0"
bitflags = { version = "1.2", optional = true }
elasticsearch = { version = "7.14.0-alpha.1", features = ["rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.8", optional = true }
yaml-rust = { version = ">=0.4.1", optional = true }

[features]
fields = ["alphonse-utils/es", "bitflags", "serde", "serde_json", "serde_yaml", "yaml-rust"]
stats = ["alphonse-api", "alphonse-utils/es", "serde", "serde_json"]
