[package]
name = "alphonse-utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alphonse-api = { path = "../api" }
anyhow = "1.0"
bitflags = { version = "1.3", optional = true }
elasticsearch = { version = "7.12.1-alpha.1", features = ["rustls-tls"] }
enum-primitive-derive = "0.2"
libc = "0.2"
nom = "6"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
tcp-reassembly = ["bitflags"]
