[package]
name = "alphonse-utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alphonse-api = { path = "../api", optional = true }
anyhow = "1.0"
bitflags = { version = "1.3", optional = true }
elasticsearch = { version = "7.12.1-alpha.1", features = ["rustls-tls"], optional = true }
enum-primitive-derive = { version = "0.2", optional = true }
libc = "0.2"
nom = "6"
num-traits = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
dissectors = ["alphonse-api", "enum-primitive-derive", "num-traits"]
es = ["elasticsearch"]
tcp-reassembly = ["alphonse-api", "bitflags"]
