[package]
name = "disk"
version = "0.1.0"
authors = ["Jack Liar"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "disk"

[dependencies]
alphonse-api = { path = "../../api", optional = false }
alphonse-utils = { path = "../../utils", optional = false }
anyhow = "1.0"
crossbeam-channel = "0.5"
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
