[package]
name = "alphonse-elasticsearch"
version = "0.1.0"
authors = ["Jack Liar"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "es"

[dependencies]
alphonse-api = { path = "../../api", optional = false }
alphonse-utils = { path = "../../utils" }
anyhow = "1.0"
chrono = "0.4"
crossbeam-channel = "0.5"
elasticsearch = { version = "7.12.1-alpha.1", features = ["rustls-tls"] }
futures = "0.3"
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }
