[package]
name = "alphonse-elasticsearch"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "es"

[dependencies]
alphonse-api = { path = "../../api", version = "0.1.0" }
alphonse-utils = { path = "../../utils", version = "0.1.0", features = ["es"] }
anyhow = "1.0"
chrono = "0.4"
crossbeam-channel = "0.5"
elasticsearch = { version = "7.14.0-alpha.1", features = ["rustls-tls"], default-features = false }
futures = "0.3"
serde_json = "1.0"
tokio = { version = ">=1.8.1", features = ["macros", "net", "rt-multi-thread", "time"] }
