[package]
name = "dns"
version = "0.1.0"
authors = ["Jack Liar"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "dns"

[dependencies]
alphonse-api = { path="../../api" }
anyhow = "1.0"
bitflags = "1.2"
enum-primitive-derive = "0.2"
nom = "6"
num-traits = "0.2"
serde = "1.0"
serde_json = "1.0"
