[package]
name = "http"
version = "0.1.0"
authors = ["Jack Liar"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "http"

[dependencies]
alphonse-api = { path = "../../api", optional = false }
anyhow = "1.0"
hyperscan = { version = "0.2", features = ["static"] }
libc = "0.2"
llhttp = { git = "https://github.com/JackLiar/rust-llhttp.git", branch = "dev", features = ["static"] }
md5 = "0.7"
once_cell = "1.6"
serde = "1.0"
serde_json = "1.0"

[features]
arkime = ["alphonse-api/arkime"]
default = ["arkime"]
