[package]
name = "ip"
version = "0.1.0"
authors = ["Jack"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "ip"

[dependencies]
alphonse-api = { path = "../../api", optional = false }
anyhow = "1.0"
fnv = "1.0"
maxminddb = { version = "0.18", features = ["mmap"] }
memmap = "0.7"
once_cell = "1.7"
serde = "1.0"
serde_json = "1.0"
