[package]
name = "simple-writer"
version = "0.1.0"
authors = ["Jack Liar"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "simplewriter"

[dependencies]
anyhow = "1.0"
alphonse-api = { path = "../../api", optional = false }
chrono = "0.4"
crossbeam-channel = "0.5"
elasticsearch = { version = "7.12.0-alpha.1", features = ["rustls-tls"], optional = true }
tokio = { version = "1", optional = true, features = ["net", "time"] }
fnv = "1.0"
nix = "0.21"
once_cell = "1.6"
pcap = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_yaml = ">=0.8.4, <=0.9"
yaml-rust = ">=0.4.1"

[features]
arkime = ["alphonse-api/arkime", "elasticsearch", "tokio"]
default = ["arkime"]
