[package]
name = "tls"
version = "0.1.0"
authors = ["Jack"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "tls"

[dependencies]
alphonse-api = { path = "../../api", optional = false }
anyhow = "1.0"
chrono = "0.4"
hex = "0.4"
libc = "0.2"
md5 = "0.7"
once_cell = "1.6"
serde = "1.0"
serde_json = "1.0"
# tls-parser = "0.10"
tls-parser = { git = "https://github.com/JackLiar/tls-parser.git", branch = "dtls-extensions" }
x509-parser = "0.9"
