[package]
name = "dns"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "dns"

[dependencies]
alphonse-api = { path = "../../api", version = "0.1.0" }
anyhow = "1.0"
bitflags = "1.3"
enum-primitive-derive = "0.2"
nom = "7"
num-traits = "0.2"
serde = "1.0"
serde_json = "1.0"

[features]
arkime = ["alphonse-api/arkime"]
