[package]
name = "ethernet"
version = "0.1.0"
authors = ["Jack Liar"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "ethernet"

[dependencies]
alphonse-api = { path = "../../api", version = "0.1.0" }
anyhow = "1.0"
fnv = "1.0"
mac_address = { version = "1.1", features = ["serde"] }
once_cell = "1.8"
serde = "1.0"
serde_json = "1.0"
