[package]
name = "ip"
version = "0.1.0"
authors = ["Jack"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "ip"

[dependencies]
alphonse-api = { path = "../../api", version = "0.1.0" }
anyhow = "1.0"
csv = "1.1"
fnv = "1.0"
maxminddb = { version = "0.21", features = ["mmap"] }
memmap2 = "0.3"
once_cell = "1.7"
serde = "1.0"
serde_json = "1.0"
