[package]
name = "misc"
version = "0.1.0"
authors = ["Jack Liar"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "misc"

[dependencies]
anyhow = "1.0"
alphonse-api = { path = "../../api", optional = false }
fnv = "1.0"
hyperscan = { version = "0.2", features = ["static"] }
libc = "0.2"
nom = "7"
serde = "1.0"
serde_json = "1.0"
yaml-rust = ">=0.4.1"
