[package]
name = "simple-writer"
version = "0.1.0"
authors = ["Jack Liar"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "simplewriter"

[dependencies]
anyhow = "1.0"
alphonse-api = { path = "../../api" }
chrono = "0.4"
crossbeam-channel = "0.5"
elasticsearch = { version = "7.12.1-alpha.1", features = ["rustls-tls"], optional = true }
fnv = "1.0"
futures = "0.3"
nix = "0.22"
once_cell = "1.6"
path-absolutize = "3.0"
pcap = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_yaml = ">=0.8.4, <=0.9"
tokio = { version = ">=1.8.1", features = ["fs", "net", "time", "rt-multi-thread"] }
yaml-rust = ">=0.4.1"

[features]
arkime = ["alphonse-api/arkime", "elasticsearch"]
default = ["arkime"]
