[package]
name = "tls"
version = "0.1.0"
authors = ["Jack"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "tls"

[dependencies]
alphonse-api = { path = "../../api", version = "0.1.0" }
alphonse-utils = { path = "../../utils", version = "0.1.0", features = ["tcp-reassembly"] }
anyhow = "1.0"
chrono = "0.4"
hex = "0.4"
libc = "0.2"
md5 = "0.7"
once_cell = "1.6"
serde = "1.0"
serde_json = "1.0"
# tls-parser = "0.10"
tls-parser = { git = "https://github.com/rusticata/tls-parser.git" }
x509-parser = "0.10"
