[package]
name = "dpdk"
version = "0.1.0"
authors = ["Jack Liar <15205739+JackLiar@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "rxlibpcap"

[dependencies]
alphonse-api = { path = "../../api" }
anyhow = "*"
crossbeam-channel = "0.5"
libc = "0.2"
once_cell = "1.7"
pcap = "0.8"
rte = { git = "https://github.com/JackLiar/rust-dpdk.git" }
serde = "1.0"
yaml-rust = ">=0.4.1"
