[package]
name = "dpdk"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "rxlibpcap"

[dependencies]
alphonse-api = { path = "../../api" }
alphonse-utils = { path = "../../utils", features = ["dissectors"] }
anyhow = "1.0"
crossbeam-channel = "0.5"
libc = "0.2"
once_cell = "1.7"
pcap = "0.8"
rte = { git = "https://github.com/JackLiar/rust-dpdk.git" }
serde = "1.0"
yaml-rust = ">=0.4.1"
