[package]
name = "files"
version = "0.1.0"
authors = ["Jack Liar"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "rxfiles"

[dependencies]
alphonse-api = { path = "../../api", optional = false }
alphonse-utils = { path = "../../utils" }
anyhow = "1.0"
crossbeam-channel = "0.5"
enum-primitive-derive = "0.2"
fnv = "1.0"
libc = "0.2"
num-traits = "0.2"
path-absolutize = "3.0"
pcap = "0.8"
serde = "1.0"
