[package]
name = "libpcap"
version = "0.1.0"
authors = ["Jack Liar"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "rxlibpcap"

[dependencies]
alphonse-api = { path = "../../api" }
alphonse-arkime = { path = "../../arkime", optional = true }
alphonse-utils = { path = "../../utils", features = ["dissectors"] }
anyhow = "1.0"
crossbeam-channel = "0.5"
elasticsearch = { version = "7.12.1-alpha.1", features = ["rustls-tls"], optional = true }
fnv = "1.0"
futures = "0.3"
libc = "0.2"
pcap = "0.8"
serde = "1.0"
serde_json = { version = "1.0", optional = true }
tokio = { version = ">=1.8.1", features = ["net", "rt-multi-thread", "time"] }

[features]
arkime = [
	"alphonse-arkime",
	"alphonse-api/arkime",
	"alphonse-utils/es",
	"elasticsearch",
	"serde_json",
]
