[package]
name = "libpcap"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "rxlibpcap"

[dependencies]
alphonse-api = { path = "../../api", version = "0.1.0" }
alphonse-arkime = { path = "../../arkime", version = "0.1.0" }
alphonse-utils = { path = "../../utils", version = "0.1.0", features = ["dissectors", "es"] }
anyhow = "1.0"
crossbeam-channel = "0.5"
fnv = "1.0"
futures = "0.3"
libc = "0.2"
num-traits = "0.2"
path-absolutize = "3.0"
pcap = "0.9"
serde = "1.0"
tokio = { version = ">=1.8.1", features = ["rt-multi-thread"] }
